fix smell for update without password update
